Perkin-UAT/force-app/main/default/objects/Lead/fields/fxPKICountryISOAlpha2__c.field-meta.xml
<CustomField>
    <fullName>fxPKICountryISOAlpha2__c</fullName>
    <businessOwnerGroup>ARQ_001007</businessOwnerGroup>
    <description>formula to get the territory info from PKI Country (ATEAM-1654)</description>
    <formula>PKICountry__r.Country_ISO_Alpha_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fx PKI Country ISO Alpha-2</label>
    <type>Text</type>
</CustomField>