Perkin-UAT/force-app/main/default/objects/Lead/fields/fxPKICountryISOAlpha3__c.field-meta.xml
<CustomField>
    <fullName>fxPKICountryISOAlpha3__c</fullName>
    <businessOwnerGroup>ARQ_001007</businessOwnerGroup>
    <description>formula to get the territory info from PKI Country (ATEAM-1654)</description>
    <formula>PKICountry__r.Country_ISO_Alpha_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fx PKI Country ISO Alpha-3</label>
    <type>Text</type>
</CustomField>