Perkin-UAT/force-app/main/default/objects/Lead/fields/fxPKISubTerritory__c.field-meta.xml
<CustomField>
    <fullName>fxPKISubTerritory__c</fullName>
    <businessOwnerGroup>ARQ_001007</businessOwnerGroup>
    <description>formula to get the territory info from PKI Country (ATEAM-1654)</description>
    <formula>TEXT(PKICountry__r.Sub_Territory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fx PKI Sub Territory</label>
    <type>Text</type>
</CustomField>