Perkin-UAT/force-app/main/default/objects/Lead/fields/fxPKISuperTerritory__c.field-meta.xml
<CustomField>
    <fullName>fxPKISuperTerritory__c</fullName>
    <businessOwnerGroup>ARQ_001007</businessOwnerGroup>
    <description>formula to get the territory info from PKI Country (ATEAM-1654)</description>
    <formula>TEXT( PKICountry__r.Super_Territory__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fx PKI Super Territory</label>
    <type>Text</type>
</CustomField>