Perkin-UAT/force-app/main/default/objects/Lead/fields/GA_Keyword_Analytics__c.field-meta.xml
<CustomField>
    <fullName>GA_Keyword_Analytics__c</fullName>
    <description>Requested by Corp Marketing Ops - Web Analytics data</description>
    <label>GA-Keyword</label>
    <type>TextArea</type>
</CustomField>