Perkin-UAT/force-app/main/default/objects/Lead/fields/GBL_GBL_Eloqua_Owner__c.field-meta.xml
<CustomField>
    <fullName>GBL_GBL_Eloqua_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eloqua Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>