Perkin-UAT/force-app/main/default/objects/Lead/fields/GROW__c.field-meta.xml
<CustomField>
    <fullName>GROW__c</fullName>
    <formula>IF(NOT(ISBLANK( Employee_Email__c )),IMAGE(&quot;/servlet/servlet.FileDownload?file=0153A000004RF8J&quot;, &quot;Grow&quot;, 30,30),&quot;&quot;)</formula>
    <label>GROW</label>
    <type>Text</type>
</CustomField>