Perkin-UAT/force-app/main/default/objects/Lead/fields/GROW_Employee_Role__c.field-meta.xml
<CustomField>
    <fullName>GROW_Employee_Role__c</fullName>
    <label>GROW Employee Role</label>
    <length>40</length>
    <type>Text</type>
</CustomField>