Perkin-UAT/force-app/main/default/objects/Lead/fields/Historic_Trace__c.field-meta.xml
<CustomField>
    <fullName>Historic_Trace__c</fullName>
    <label>Historic Trace</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>