Perkin-UAT/force-app/main/default/objects/Lead/fields/ICP_List__c.field-meta.xml
<CustomField>
    <fullName>ICP_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICP List</label>
    <type>Checkbox</type>
</CustomField>