Perkin-UAT/force-app/main/default/objects/Lead/fields/IGOR_PAC__c.field-meta.xml
<CustomField>
    <fullName>IGOR_PAC__c</fullName>
    <label>IGOR_PAC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>