Perkin-UAT/force-app/main/default/objects/Lead/fields/Industry_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Industry_Prospect__c</fullName>
    <description>Mapped to Eloqua - for PDG program</description>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academia</fullName>
            </value>
            <value>
                <fullName>Pharma and BioPharma</fullName>
            </value>
            <value>
                <fullName>Pharma QA/QC Manufacturing</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Food and Agriculture</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Geochemistry, Mining and Metals</fullName>
            </value>
            <value>
                <fullName>Forensics and Security</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>CRO</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Pharma</fullName>
            </value>
            <value>
                <fullName>Biopharma &amp; Biotech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>