Perkin-UAT/force-app/main/default/objects/Lead/fields/INF_Contact_Requested__c.field-meta.xml
<CustomField>
    <fullName>INF_Contact_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to track information being updated by the Pardot Prospect record and is used in the MQL determination process.</description>
    <inlineHelpText>This field is used to track information being updated by the Pardot Prospect record and is used in the MQL determination process.</inlineHelpText>
    <label>Contact Requested</label>
    <type>Checkbox</type>
</CustomField>