Perkin-UAT/force-app/main/default/objects/Lead/fields/INF_Lead_Assignment_Field__c.field-meta.xml
<CustomField>
    <fullName>INF_Lead_Assignment_Field__c</fullName>
    <description>The concen of product family, inf product line and business line</description>
    <label>INF Lead Assignment Field</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>