Perkin-UAT/force-app/main/default/objects/Lead/fields/INF_Related_case__c.field-meta.xml
<CustomField>
    <fullName>INF_Related_case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>