Perkin-UAT/force-app/main/default/objects/Lead/fields/Inside_Sales_Rep_2__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Rep_2__c</fullName>
    <label>Inside Sales Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cathy Chitwood</fullName>
            </value>
            <value>
                <fullName>Elaine Amico</fullName>
            </value>
            <value>
                <fullName>Jason Robinson</fullName>
            </value>
            <value>
                <fullName>Melana Spalding</fullName>
            </value>
            <value>
                <fullName>Phil Rogers</fullName>
            </value>
            <value>
                <fullName>Allen Wardle</fullName>
            </value>
            <value>
                <fullName>Carolyn Hummel</fullName>
            </value>
            <value>
                <fullName>Meara Jones</fullName>
            </value>
            <value>
                <fullName>James Thouin</fullName>
            </value>
            <value>
                <fullName>Richard Ouellette</fullName>
            </value>
            <value>
                <fullName>Joe Lavoie</fullName>
            </value>
            <value>
                <fullName>Stella Ponzo</fullName>
            </value>
            <value>
                <fullName>Rosemarie Connolly</fullName>
            </value>
            <value>
                <fullName>David Stanton</fullName>
            </value>
            <value>
                <fullName>Barbara Fuller</fullName>
            </value>
            <value>
                <fullName>Blandine Buhot</fullName>
            </value>
            <value>
                <fullName>Marc Saché</fullName>
            </value>
            <value>
                <fullName>Michel Henvaux</fullName>
            </value>
            <value>
                <fullName>Johan Grootjans</fullName>
            </value>
            <value>
                <fullName>Andy Alban</fullName>
            </value>
            <value>
                <fullName>Lee Holland</fullName>
            </value>
            <value>
                <fullName>Azra Ramzan</fullName>
            </value>
            <value>
                <fullName>Barbara Siefker</fullName>
            </value>
            <value>
                <fullName>Stefan Woldmann</fullName>
            </value>
            <value>
                <fullName>Ronald Edler</fullName>
            </value>
            <value>
                <fullName>Sergio Baldessari</fullName>
            </value>
            <value>
                <fullName>Riina Huovinen</fullName>
            </value>
            <value>
                <fullName>Hanne Olsen</fullName>
            </value>
            <value>
                <fullName>Elisabeth Ruettimann</fullName>
            </value>
            <value>
                <fullName>Robert Montefusco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>