Perkin-UAT/force-app/main/default/objects/Lead/fields/Inside_Sales_Rep_Name_List__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Rep_Name_List__c</fullName>
    <label>Inside Sales Rep Name List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cathy Chitwood</fullName>
            </value>
            <value>
                <fullName>Elaine Amico</fullName>
            </value>
            <value>
                <fullName>Jason Robinson</fullName>
            </value>
            <value>
                <fullName>Melana Spalding</fullName>
            </value>
            <value>
                <fullName>Nicole Dyck</fullName>
            </value>
            <value>
                <fullName>Phil Rogers</fullName>
            </value>
            <value>
                <fullName>Susan Hegseth</fullName>
            </value>
            <value>
                <fullName>Allen Wardle</fullName>
            </value>
            <value>
                <fullName>Lynn Laptalo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>