Perkin-UAT/force-app/main/default/objects/Lead/fields/Interest_DNA__c.field-meta.xml
<CustomField>
    <fullName>Interest_DNA__c</fullName>
    <label>Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Customer Suppor</fullName>
            </value>
            <value>
                <fullName>Educational Software</fullName>
            </value>
            <value>
                <fullName>Finch Suite OnDemand</fullName>
            </value>
            <value>
                <fullName>Finch Suite Products</fullName>
            </value>
            <value>
                <fullName>FinchTV</fullName>
            </value>
            <value>
                <fullName>iFinch</fullName>
            </value>
            <value>
                <fullName>Next Gen Sequencing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Product Training</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>