Perkin-UAT/force-app/main/default/objects/Lead/fields/Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Type__c</fullName>
    <label>Interest Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GS LE - Sanger</fullName>
            </value>
            <value>
                <fullName>GS LE - NextGen</fullName>
            </value>
            <value>
                <fullName>GL LE - Microarray</fullName>
            </value>
            <value>
                <fullName>GS AE - Microarray</fullName>
            </value>
            <value>
                <fullName>GS AE - Analysis Kit</fullName>
            </value>
            <value>
                <fullName>Channel Partner - End User</fullName>
            </value>
            <value>
                <fullName>Support/Maintenance</fullName>
            </value>
            <value>
                <fullName>GeneSifter</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>