Perkin-UAT/force-app/main/default/objects/Lead/fields/IR_List__c.field-meta.xml
<CustomField>
    <fullName>IR_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IR List</label>
    <type>Checkbox</type>
</CustomField>