Perkin-UAT/force-app/main/default/objects/Lead/fields/Is_Dx__c.field-meta.xml
<CustomField>
    <fullName>Is_Dx__c</fullName>
    <formula>AND
(
 INCLUDES(BE__c, &quot;Dx&quot;),
NOT(INCLUDES(BE__c,&quot;SVC&quot;)),
NOT(INCLUDES(BE__c,&quot;INF&quot;)),
NOT(INCLUDES(BE__c,&quot;LST&quot;)),
NOT(INCLUDES(BE__c,&quot;MED&quot;)),
NOT(INCLUDES(BE__c,&quot;ONE&quot;)),
NOT(INCLUDES(BE__c,&quot;EH&quot;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Dx</label>
    <type>Checkbox</type>
</CustomField>