Perkin-UAT/force-app/main/default/objects/Lead/fields/IS_Lead_Action__c.field-meta.xml
<CustomField>
    <fullName>IS_Lead_Action__c</fullName>
    <label>IS Lead Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Lead Qualification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>