Perkin-UAT/force-app/main/default/objects/Lead/fields/Is_TurnBack_or_Rejected_1__c.field-meta.xml
<CustomField>
    <fullName>Is_TurnBack_or_Rejected_1__c</fullName>
    <description>Boolean yields true or false if any of the SAI fields say Turnback or Rejected</description>
    <formula>And
(
OR(
CONTAINS (TEXT(Status_Strategic_Services__c),&quot;Turnback&quot;),
CONTAINS (TEXT(Status_Strategic_Services__c),&quot;Rejected&quot;),
CONTAINS (TEXT(Status_Disease_Research__c),&quot;Turnback&quot;),
CONTAINS (TEXT(Status_Disease_Research__c),&quot;Rejected&quot;),
CONTAINS (TEXT(Status_Drug_Discovery__c),&quot;Turnback&quot;),
CONTAINS (TEXT(Status_Drug_Discovery__c),&quot;Rejected&quot;),
CONTAINS (TEXT(Status_Pre_Clinical_Studies__c),&quot;Turnback&quot;),
CONTAINS (TEXT(Status_Pre_Clinical_Studies__c),&quot;Rejected&quot;),
CONTAINS (TEXT(Status_Clinical_Studies__c),&quot;Turnback&quot;),
CONTAINS (TEXT(Status_Clinical_Studies__c),&quot;Rejected&quot;),
CONTAINS (TEXT(Status_QA_QC_Drug_Manufacturing_Process__c),&quot;Turnback&quot;),
CONTAINS (TEXT(Status_QA_QC_Drug_Manufacturing_Process__c),&quot;Rejected&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is TurnBack or Rejected 1</label>
    <type>Checkbox</type>
</CustomField>