Perkin-UAT/force-app/main/default/objects/Lead/fields/Is_TurnBack_or_Rejected_2__c.field-meta.xml
<CustomField>
    <fullName>Is_TurnBack_or_Rejected_2__c</fullName>
    <description>Boolean yields true or false if any of the SAI fields say Turnback or Rejected</description>
    <formula>And
(
OR(
CONTAINS (TEXT(Status_Digital_Lab__c),&quot;Turnback&quot;),
CONTAINS (TEXT(Status_Digital_Lab__c),&quot;Rejected&quot;),
CONTAINS (TEXT(Status_Food_Quality__c),&quot;Turnback&quot;),
CONTAINS (TEXT(Status_Food_Quality__c),&quot;Rejected&quot;),
CONTAINS (TEXT(Status_Food_Safety__c),&quot;Turnback&quot;),
CONTAINS (TEXT(Status_Food_Safety__c),&quot;Rejected&quot;),
CONTAINS (TEXT(Status_Material__c),&quot;Turnback&quot;),
CONTAINS (TEXT(Status_Material__c),&quot;Rejected&quot;),
CONTAINS (TEXT(Status_Chemicals__c),&quot;Turnback&quot;),
CONTAINS (TEXT(Status_Chemicals__c),&quot;Rejected&quot;),
CONTAINS (TEXT(Status_Energy__c),&quot;Turnback&quot;),
CONTAINS (TEXT(Status_Energy__c),&quot;Rejected&quot;),
CONTAINS (TEXT(Status_Geochemistry_Mining_and_Metals__c),&quot;Turnback&quot;),
CONTAINS (TEXT(Status_Geochemistry_Mining_and_Metals__c),&quot;Rejected&quot;),
CONTAINS (TEXT(Status_Forensics_and_Security__c),&quot;Turnback&quot;),
CONTAINS (TEXT(Status_Forensics_and_Security__c),&quot;Rejected&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is TurnBack or Rejected 2</label>
    <type>Checkbox</type>
</CustomField>