Perkin-UAT/force-app/main/default/objects/Lead/fields/Is_Warm_Dispensation_OOP__c.field-meta.xml
<CustomField>
    <fullName>Is_Warm_Dispensation_OOP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gets checked if Dispensation OOP record</description>
    <label>Is Warm Dispensation OOP</label>
    <type>Checkbox</type>
</CustomField>