Perkin-UAT/force-app/main/default/objects/Lead/fields/IsConvertedfromLead__c.field-meta.xml
<CustomField>
    <fullName>IsConvertedfromLead__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsConvertedfromLead</label>
    <type>Checkbox</type>
</CustomField>