Perkin-UAT/force-app/main/default/objects/Lead/fields/Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Function__c</fullName>
    <label>Job Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>01</fullName>
                <label>Admin/Office</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Business Management</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Customer Services</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Finance</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Health Professional</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>IT</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Lab Professional</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Marketing Professional</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Others</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Purchasing</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Quality/Regulatory</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Sales Professional</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Science &amp; Research</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>