Perkin-UAT/force-app/main/default/objects/Lead/fields/Just_Converted__c.field-meta.xml
<CustomField>
    <fullName>Just_Converted__c</fullName>
    <description>Gets stamped with true when converted from lead</description>
    <label>Just Converted</label>
    <length>10</length>
    <type>Text</type>
</CustomField>