Perkin-UAT/force-app/main/default/objects/Lead/fields/Last_Lead_Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Last_Lead_Source_Channel__c</fullName>
    <description>ANNUITAS PDG Program</description>
    <label>Last Lead Source - Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Content-Syndication</fullName>
            </value>
            <value>
                <fullName>Digital-Events</fullName>
            </value>
            <value>
                <fullName>Display-Ad</fullName>
            </value>
            <value>
                <fullName>Email-Outbound</fullName>
            </value>
            <value>
                <fullName>eNewsletter</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>External-Links-Citations</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Organic-Facebook</fullName>
            </value>
            <value>
                <fullName>Organic-Instagram</fullName>
            </value>
            <value>
                <fullName>Organic-LinkedIn</fullName>
            </value>
            <value>
                <fullName>Organic-Twitter</fullName>
            </value>
            <value>
                <fullName>Paid-Facebook</fullName>
            </value>
            <value>
                <fullName>Paid-Linkedin</fullName>
            </value>
            <value>
                <fullName>Paid-Twitter</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>Product-Listing</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Retargeting</fullName>
            </value>
            <value>
                <fullName>Sales-Enablement</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>