Perkin-UAT/force-app/main/default/objects/Lead/fields/Last_Lead_Source_Partner__c.field-meta.xml
<CustomField>
    <fullName>Last_Lead_Source_Partner__c</fullName>
    <description>ANNUITAS PDG Program</description>
    <label>Last Lead Source - Partner</label>
    <type>TextArea</type>
</CustomField>