Perkin-UAT/force-app/main/default/objects/Lead/fields/Lead_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Lead_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom Lead Assignment Rule will be checked by Trigger</description>
    <label>Assign Rule</label>
    <type>Checkbox</type>
</CustomField>