Perkin-UAT/force-app/main/default/objects/Lead/fields/Lead_Auto_Assign__c.field-meta.xml
<CustomField>
    <fullName>Lead_Auto_Assign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Lead Assignment Application</description>
    <label>Lead Auto Assign</label>
    <type>Checkbox</type>
</CustomField>