Perkin-UAT/force-app/main/default/objects/Lead/fields/Lead_Completeness__c.field-meta.xml
<CustomField>
    <fullName>Lead_Completeness__c</fullName>
    <description>Used to determine the completeness of a lead as far as data</description>
    <formula>IMAGE(
IF(Data_Quality_Score__c &lt;= 20 ,&quot;/img/samples/stars_100.gif&quot;,
  If(Data_Quality_Score__c &lt;= 40 , &quot;/img/samples/stars_200.gif&quot;,
   IF(Data_Quality_Score__c &lt;= 60, &quot;/img/samples/stars_300.gif&quot;,
    IF(Data_Quality_Score__c &lt;= 80, &quot;/img/samples/stars_400.gif&quot;,&quot;/img/samples/stars_500.gif&quot;))))
,&quot;ratin&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to determine the completeness of a lead as far as data</inlineHelpText>
    <label>Lead Completeness</label>
    <type>Text</type>
</CustomField>