Perkin-UAT/force-app/main/default/objects/Lead/fields/Lead_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Legacy_ID__c</fullName>
    <externalId>true</externalId>
    <label>Lead Legacy ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>