Perkin-UAT/force-app/main/default/objects/Lead/fields/Lead_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Manager_Email__c</fullName>
    <description>Gets stamped with the Leads manager email</description>
    <label>Lead Manager Email</label>
    <type>Email</type>
</CustomField>