Perkin-UAT/force-app/main/default/objects/Lead/fields/Lead_open_date_exceeded__c.field-meta.xml
<CustomField>
    <fullName>Lead_open_date_exceeded__c</fullName>
    <formula>TODAY() - 30 &gt; DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead open date exceeded</label>
    <type>Checkbox</type>
</CustomField>