Perkin-UAT/force-app/main/default/objects/Lead/fields/Lead_Owner_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Queue_Name__c</fullName>
    <description>This field is used to group the ownership of the Lead by queue and by user.</description>
    <formula>IF(ISBLANK(Owner:User.Id),  IF(Contains(Owner:Queue.QueueName, &quot;LST&quot;), &quot;LST Queue&quot;, IF(Contains(Owner:Queue.QueueName, &quot;EH&quot;), &quot;EH Queue&quot;, IF(Contains(Owner:Queue.QueueName, &quot;INF&quot;), &quot;INF Queue&quot;, &quot;Other Queue&quot;))),  Owner:User.FirstName &amp; &#39; &#39; &amp; Owner:User.LastName)</formula>
    <label>Lead Owner/Queue Name</label>
    <type>Text</type>
</CustomField>