Perkin-UAT/force-app/main/default/objects/Lead/fields/Lead_Qualification_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Qualification_Stage__c</fullName>
    <description>ANNUITAS PDG Program</description>
    <label>Lead Qualification Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Qualified Engaged</fullName>
            </value>
            <value>
                <fullName>Qualified Lead - Warm</fullName>
            </value>
            <value>
                <fullName>Qualified Lead - Hot</fullName>
            </value>
            <value>
                <fullName>Zero Stage</fullName>
            </value>
            <value>
                <fullName>Create/Plan</fullName>
            </value>
            <value>
                <fullName>Qualify</fullName>
            </value>
            <value>
                <fullName>Develop</fullName>
            </value>
            <value>
                <fullName>Prove</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>