Perkin-UAT/force-app/main/default/objects/Lead/fields/Lead_Source_Back_up__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Back_up__c</fullName>
    <label>Lead Source Back up</label>
    <length>100</length>
    <type>Text</type>
</CustomField>