Perkin-UAT/force-app/main/default/objects/Lead/fields/Lead_Source_SVC__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_SVC__c</fullName>
    <label>Lead Source SVC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Field Service</fullName>
            </value>
            <value>
                <fullName>Inside Service</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Product Sales</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>